grub-installer (0.39) UNRELEASED; urgency=low

  * Petter Reinholdtsen
    - Call dh_fixperms in rules to get package buildable even
      if the source directory is setgid.
    - Add some debug logging trying to find out why it fail in Woody.

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 30 Mar 2004 21:31:04 +0200

grub-installer (0.38) unstable; urgency=low

  * Joey Hess
    - Test to make sure grub-install supports --no-floppy before using it.
      It does not in stable or Skolelinux.
  * Updated translations: 
    - Hebrew (he.po) by Lior Kaplan
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 13:09:58 -0500

grub-installer (0.37) unstable; urgency=low

  * Joey Hess
    - Pass --no-floppy to grub-install, to avoid long delays/hangs
      probing for floppy disks on some floppy-less systems.
      Closes: #220130, #238449, #239019
    - Add a is_floppy check, which turns off the --no-floppy, in case someone
      types (fd0).
  * Updated translations: 
    - Bosnian (bs.po) by Safir Šećerović
    - German (de.po) by Dennis Stampfer
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Turkish (tr.po) by Osman Yüksel
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Sun, 28 Mar 2004 15:38:32 -0500

grub-installer (0.36) unstable; urgency=low

  * Translations:
    - Dennis Stampfer
      - Update German translation (de.po)
    - Russian by Nikolai Prokoschenko
    - Giuseppe Sacco
      - Updated italian translation and notified translator (it.po)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:26:04 +0100

grub-installer (0.35) unstable; urgency=low

  * Petter Reinholdtsen
    - Remove Moshe Zadka and Tollef Fog Heen as uploaders.  Neither
      have uploaded this package for months
    - Add Joey Hess as uploader, as he has been doing the upload the
      last few times.
  * Translations: