@@ -4,6 +4,10 @@ grub-installer (0.39) UNRELEASED; urgency=low
     - Call dh_fixperms in rules to get package buildable even
       if the source directory is setgid.
     - Add some debug logging trying to find out why it fail in Woody.
+  * Joey Hess
+    - Fix rules file, this package is not arch indep though it contains
+      no compiled files.
+    - Use debhelper's udeb support.
 
  -- Petter Reinholdtsen <pere@debian.org>  Tue, 30 Mar 2004 21:31:04 +0200
 
